# tensorflow-actix

./: Cargo.toml  README.md
src/: index.rs  main.rs  predict.rs
templates/: index.html
templates/includes/: head.html
